Update gitignore and update license

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
-*.annot
-*.cmo
-*.cma
-*.cmi
-*.a
-*.o
-*.cmx
-*.cmxs
-*.cmxa
-
-# ocamlbuild working directory
-_build/
-
-# ocamlbuild targets
-*.byte
+_build
+*~
+\.\#*
+\#*#
 *.native
-
-# oasis generated files
-setup.data
-setup.log
-
-# Merlin configuring file for Vim and Emacs
+*.byte
+*.install
+_tests/
 .merlin
