--- a/lib/specs/dune
+++ b/lib/specs/dune
@@ -1,4 +1,4 @@
 (library
  (name specs)
  (public_name preface.specs)
- (modules_without_implementation specs functor))
+ (modules_without_implementation specs functor applicative))
