--- a/lib/preface/dune
+++ b/lib/preface/dune
@@ -1,8 +1,4 @@
 (library
  (name preface)
  (public_name preface)
- (libraries
-   preface.core
-   preface.specs
-   preface.make
-   preface.stdlib))
+ (libraries preface.core preface.specs preface.make preface.stdlib))
