--- a/lib/preface_stdlib/dune
+++ b/lib/preface_stdlib/dune
@@ -1,6 +1,4 @@
 (library
  (name preface_stdlib)
  (public_name preface.stdlib)
- (libraries
-   preface.specs
-   preface.make))
+ (libraries preface.specs preface.make))
