--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [macos-latest, ubuntu-latest]
-        ocaml-version: [ '4.09.0', '4.08.1', '4.07.1', '4.06.1', '4.05.0', '4.04.0', '4.03.0' ]
+        ocaml-version: [ '4.09.0', '4.08.1', '4.08.0' ]
     steps:
     - uses: actions/checkout@master
     - uses: avsm/setup-ocaml@v1.0
