Add Functor3, Functor2 and define Functor as a Functor2

--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -1,5 +1,15 @@
 (library
  (name preface_specs)
  (public_name preface.specs)
- (modules_without_implementation preface_specs requirements functor
-   applicative selective monad comonad traversable))
+ (modules_without_implementation
+   preface_specs
+   requirements
+   functor3
+   functor2
+   functor
+   applicative
+   selective
+   monad
+   comonad
+   traversable)
+)
