Remane FreeEr to Freer

--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -2,4 +2,4 @@
  (name preface_specs)
  (public_name preface.specs)
  (modules_without_implementation preface_specs requirements functor
-   applicative selective monad comonad free freeEr))
+   applicative selective monad comonad free freer))
