--- a/preface.opam
+++ b/preface.opam
@@ -25,6 +25,8 @@ depends: [
   "ocaml" { >= "4.08.0" }
   "dune" { >= "1.11" }
   "alcotest" {with-test}
+  "qcheck-core" {with-test}
+  "qcheck-alcotest" {with-test}
   "odoc"{with-doc}
 ]
 
