Freer monad following the Free monad modularity

--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -2,4 +2,5 @@
  (name preface_specs)
  (public_name preface.specs)
  (modules_without_implementation preface_specs requirements functor
-   applicative selective monad comonad traversable bifunctor free_monad))
+   applicative selective monad comonad traversable bifunctor free_monad
+   freer_monad))
