Define a minimal version of Either in Preface_core

--- a/lib/preface_core/dune
+++ b/lib/preface_core/dune
@@ -1,3 +1,4 @@
 (library
  (name preface_core)
- (public_name preface.core))
+ (public_name preface.core)
+ (modules_without_implementation requirements))
