--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -2,5 +2,5 @@
  (name preface_specs)
  (public_name preface.specs)
  (modules_without_implementation preface_specs types functor applicative
-   selective monad comonad traversable bifunctor free_monad freer_monad)
+   selective monad comonad traversable bifunctor free_monad freer_monad semigroup)
  (libraries preface.core))
