--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -3,5 +3,5 @@
  (public_name preface.specs)
  (modules_without_implementation preface_specs types functor applicative
    selective monad comonad traversable bifunctor free_monad freer_monad
-   semigroup monoid)
+   semigroup monoid foldable)
  (libraries preface.core))
