--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -3,7 +3,8 @@
  (public_name preface.specs)
  (modules_without_implementation
    preface_specs types functor applicative
-   selective monad comonad traversable bifunctor free_applicative free_monad
-   freer_monad semigroup monoid foldable alt alternative monad_plus
+   selective monad comonad traversable bifunctor
+   free_applicative free_monad freer_monad free_selective
+   semigroup monoid foldable alt alternative monad_plus
    category arrow arrow_zero arrow_alt arrow_plus)
  (libraries preface.core))
