Use `either` package
Since Either is now part of the standard library we should use it in
order to sligthly decrease the size and the complexity of Selective.

--- a/lib/preface_make/dune
+++ b/lib/preface_make/dune
@@ -1,4 +1,4 @@
 (library
  (name preface_make)
  (public_name preface.make)
- (libraries preface.core preface.specs))
+ (libraries either preface.core preface.specs))
