--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -7,4 +7,4 @@
    free_applicative free_monad freer_monad free_selective
    semigroup monoid foldable alt alternative monad_plus
    category arrow arrow_zero arrow_alt arrow_plus)
- (libraries preface.core))
+ (libraries preface.core either))
