--- a/test/preface_behaviours_test/dune
+++ b/test/preface_behaviours_test/dune
@@ -1,3 +1,3 @@
 (test
  (name preface_behaviours_test)
- (libraries preface.qcheck preface.stdlib alcotest))
+ (libraries preface.qcheck preface.stdlib alcotest fmt))
