--- a/test/preface_stdlib_test/dune
+++ b/test/preface_stdlib_test/dune
@@ -1,3 +1,3 @@
 (test
  (name preface_stdlib_test)
- (libraries alcotest preface.stdlib preface))
+ (libraries alcotest fmt preface.core preface.stdlib preface))
