--- a/test/preface_qcheck/dune
+++ b/test/preface_qcheck/dune
@@ -1,7 +1,6 @@
 (library
  (name preface_qcheck)
  (public_name preface.qcheck)
- (synopsis "A QCheck's companion for Preface")
- (modules_without_implementation requirement preface_qcheck)
- (libraries alcotest fmt qcheck-core qcheck-alcotest preface.core
+ (synopsis "A QCheck's companion for Preface")  
+ (libraries qcheck-core preface.core
    preface.specs preface.make preface.stdlib))
