Add contravariant functor

--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -4,5 +4,5 @@
  (modules_without_implementation preface_specs types functor applicative
    selective monad comonad traversable bifunctor free_applicative free_monad
    freer_monad free_selective semigroup monoid foldable alt alternative
-   monad_plus category arrow arrow_zero arrow_alt arrow_plus)
+   monad_plus contravariant category arrow arrow_zero arrow_alt arrow_plus)
  (libraries preface.core either))
