--- a/test/preface_laws/dune
+++ b/test/preface_laws/dune
@@ -3,12 +3,12 @@
  (public_name preface.laws)
  (synopsis "Encoding laws as a set of tests")
  (modules functor applicative selective monad comonad bifunctor semigroup
-   monoid alternative monad_plus alt contravariant)
+   monoid alternative monad_plus alt contravariant category arrow)
  (libraries qcheck-core qcheck-alcotest preface.core preface.specs
    preface.make preface.stdlib preface.qcheck))
 
 (test
  (name preface_laws_suite)
  (modules misc identity continuation option list nonempty_list try either
-   stream result validation validate state predicate preface_laws_suite)
- (libraries preface.qcheck preface.stdlib alcotest preface_laws))
+   stream result validation validate state fun predicate preface_laws_suite)
+ (libraries preface.qcheck preface.stdlib alcotest preface.laws))
