--- a/test/preface_laws/dune
+++ b/test/preface_laws/dune
@@ -3,7 +3,8 @@
  (public_name preface.laws)
  (synopsis "Encoding laws as a set of tests")
  (modules aliases functor applicative selective monad comonad bifunctor
-   semigroup monoid alternative monad_plus alt contravariant category arrow)
+   semigroup monoid alternative monad_plus alt contravariant category arrow
+   arrow_choice)
  (libraries qcheck-core qcheck-alcotest preface.core preface.specs
    preface.make preface.stdlib preface.qcheck))
 
