--- a/test/preface_laws/dune
+++ b/test/preface_laws/dune
@@ -10,5 +10,5 @@
 (test
  (name preface_laws_suite)
  (modules misc identity continuation option list nonempty_list try either
-   stream result validation validate fun predicate preface_laws_suite)
+   stream result validation validate fun tuple predicate preface_laws_suite)
  (libraries preface.qcheck preface.stdlib alcotest preface.laws))
