--- a/lib/preface/dune
+++ b/lib/preface/dune
@@ -1,4 +1,4 @@
 (library
- (name preface)
+ (name Preface)
  (public_name preface)
- (libraries preface.core preface.specs preface.make preface.stdlib))
+ (libraries preface_specs preface_make preface_stdlib))
