--- a/test/preface_laws/dune
+++ b/test/preface_laws/dune
@@ -1,14 +1,54 @@
 (library
  (name preface_laws)
  (synopsis "Encoding laws as a set of tests")
- (modules aliases functor applicative selective monad comonad bifunctor
-   semigroup monoid alternative monad_plus alt contravariant category arrow
-   arrow_choice arrow_apply profunctor strong choice closed)
- (libraries qcheck-core qcheck-alcotest preface_core preface_specs
-   preface_make preface_stdlib preface_qcheck))
+ (modules
+  aliases
+  functor
+  applicative
+  selective
+  monad
+  comonad
+  bifunctor
+  semigroup
+  monoid
+  alternative
+  monad_plus
+  alt
+  contravariant
+  category
+  arrow
+  arrow_choice
+  arrow_apply
+  profunctor
+  strong
+  choice
+  closed)
+ (libraries
+  qcheck-core
+  qcheck-alcotest
+  preface_core
+  preface_specs
+  preface_make
+  preface_stdlib
+  preface_qcheck))
 
 (test
  (name preface_laws_suite)
- (modules misc identity continuation option list nonempty_list try either
-   stream result validation validate fun pair predicate preface_laws_suite)
+ (modules
+  misc
+  identity
+  continuation
+  option
+  list
+  nonempty_list
+  try
+  either
+  stream
+  result
+  validation
+  validate
+  fun
+  pair
+  predicate
+  preface_laws_suite)
  (libraries preface_qcheck preface_stdlib alcotest preface_laws))
