--- a/test/preface_qcheck/dune
+++ b/test/preface_qcheck/dune
@@ -2,5 +2,9 @@
  (name preface_qcheck)
  (synopsis "A QCheck's companion for Preface")
  (modules_without_implementation model)
- (libraries qcheck-core preface_core preface_specs preface_make
-   preface_stdlib))
+ (libraries
+  qcheck-core
+  preface_core
+  preface_specs
+  preface_make
+  preface_stdlib))
