Normalize Make documentation

--- a/lib/preface_make/dune
+++ b/lib/preface_make/dune
@@ -1,4 +1,5 @@
 (library
  (name preface_make)
  (public_name preface.make)
+ (modules_without_implementation preface_make)
  (libraries either preface_core preface.specs))
