--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -1,6 +1,6 @@
 (library
  (name preface_specs)
- (package preface)
+ (public_name preface.specs)
  (modules_without_implementation
   preface_specs
   types
