--- a/preface.opam
+++ b/preface.opam
@@ -28,6 +28,7 @@ depends: [
   "alcotest" {with-test}
   "qcheck-core" {with-test}
   "qcheck-alcotest" {with-test}
+  "mdx" {with-test}
   "odoc"{with-doc}
 ]
 
