--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,50 @@
 name: Preface workflow
 on:
-  - pull_request
+  pull_request:
+  push:
+  schedule:
+    # Prime the caches every Monday
+    - cron: 0 1 * * MON
 
 jobs:
+  build_opam:
+    name: Test opam build & run tests
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+          - ubuntu-latest
+        ocaml-compiler:
+          - 4.12.x
+          - 4.11.0
+          - 4.10.1
+          - 4.09.1
+          - 4.08.1
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Set git to use LF
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Use OCaml ${{ matrix.ocaml-compiler }}
+        uses: ocaml/setup-ocaml@v2
+        with:
+          ocaml-compiler: ${{ matrix.ocaml-compiler }}
+          opam-depext-flags: --with-test
+
+      - run: opam install . --deps-only --with-test
+
+      - run: opam exec -- dune build
+
+      - run: opam exec -- dune runtest
+
   build_esy:
     name: Test esy build
     runs-on: ubuntu-latest
@@ -22,39 +64,3 @@ jobs:
 
       - name: Execute esy build
         run: npx esy build
-
-  build_opam:
-    name: Test opam build & run tests
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - macos-latest
-          - ubuntu-latest
-        ocaml-version:
-          - 4.12.0
-          - 4.11.0
-          - 4.10.1
-          - 4.09.1
-          - 4.08.1
-
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Use OCaml ${{ matrix.ocaml-version }}
-        uses: avsm/setup-ocaml@v1
-        with:
-          ocaml-version: ${{ matrix.ocaml-version }}
-
-      - run: opam pin add preface.dev . --no-action
-
-      - run: opam depext preface --yes --with-doc --with-test
-
-      - run: opam install . --deps-only --with-doc --with-test
-
-      - run: opam exec -- dune build
-
-      - run: opam exec -- dune runtest
