Laws for Monoid Hierarchy

--- a/lib/preface_laws/dune
+++ b/lib/preface_laws/dune
@@ -2,4 +2,4 @@
  (name preface_laws)
  (public_name preface.laws)
  (modules_without_implementation preface_laws)
- (libraries either preface.core preface.specs))
+ (libraries preface.core preface.specs preface.make))
