--- a/preface.opam
+++ b/preface.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-version: "dev"
+version: "0.1.0"
 
 maintainer: "xaviervdw@gmail.com"
 authors: [
@@ -32,8 +32,8 @@ depends: [
   "odoc"{with-doc}
 ]
 
-synopsis: "An exploration of some theorical aspect of functional programming"
+synopsis: "An opinionated library for function programming (à La Haskell)"
 description:"""
-Preface is a library dedicated to functional programming in OCaml.
-(Named in reference of Prelude)
+Preface is an opinionated library designed to facilitate the
+handling of recurring functional programming idioms in OCaml.
 """
