Make `dune subst` only available in dev

--- a/preface.opam
+++ b/preface.opam
@@ -15,7 +15,7 @@ dev-repo: "git+https://github.com/xvw/preface.git"
 bug-reports: "https://github.com/xvw/preface/issues"
 
 build: [
-  [ "dune" "subst" ]
+  [ "dune" "subst" ] {dev}
   [ "dune" "build" "-p" name "-j" jobs ]
   [ "dune" "runtest" "-p" name ] {with-test}
   [ "dune" "build" "@doc" "-p" name ] {with-doc}
@@ -23,7 +23,7 @@ build: [
 
 depends: [
   "ocaml" { >= "4.08.0" }
-  "dune" { >= "2.7.1" }
+  "dune" { >= "2.8.0" }
   "either"
   "alcotest" {with-test}
   "qcheck-core" {with-test}
