--- a/lib/preface/dune
+++ b/lib/preface/dune
@@ -1,4 +1,9 @@
 (library
  (name Preface)
  (public_name preface)
- (libraries preface_specs preface_make preface_stdlib preface_laws preface_qcheck))
+ (libraries
+  preface_specs
+  preface_make
+  preface_stdlib
+  preface_laws
+  preface_qcheck))
