add Bounded_join_semilattice abstraction

--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -47,6 +47,7 @@
   traced
   semigroupoid
   meet_semilattice
+  join_semilattice
   bounded_meet_semilattice
-  join_semilattice)
+  bounded_join_semilattice)
  (libraries preface_core))
