Add `Indexed_monad` (and propagate ^laws in LAWS)
Co-authored-by: xvw <xaviervdw@gmail.com>

--- a/lib/preface_specs/dune
+++ b/lib/preface_specs/dune
@@ -10,6 +10,8 @@
   indexed_applicative
   indexed_alternative
   indexed_selective
+  indexed_bind
+  indexed_monad
   functor
   apply
   applicative
