--- a/preface.opam
+++ b/preface.opam
@@ -25,8 +25,8 @@ depends: [
   "ocaml" { >= "4.12.0" }
   "dune" { >= "2.8.0" }
   "alcotest" {with-test}
-  "qcheck-core" {with-test & >= "0.18" & < "0.24"}
-  "qcheck-alcotest" {with-test & < "0.24"}
+  "qcheck-core"
+  "qcheck-alcotest" {with-test}
   "mdx" {with-test}
   "odoc"{with-doc}
 ]
